--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-lottie-player": "^1.5.4"
   }
 }
